fix line brakes and missalignment

--- a/frontend/gfx/css/all-in-one.css
+++ b/frontend/gfx/css/all-in-one.css
@@ -40,7 +40,7 @@ body {
 }
 
 .stat {
-  font-size: 60px;
+  font-size: 50px;
   display: flex;
 }
 
@@ -72,7 +72,7 @@ body {
 }
 
 .ban {
-  width: 43px;
+  width: 45px;
 }
 
 .stat.blue .ban:not(:first-child) {
@@ -100,6 +100,7 @@ body {
 
 #damageGraph .team {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
